image generator from html content.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "puppeteer": "^23.7.1"
   }
 }
